# morpheus

./: .env.example  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/morpheus/: __init__.py  cli.py  config.py  core.py  orchestrator.py  planner.py  utils.py
tests/: test_core.py
