[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "morpheus-agent"
version = "0.1.0"
description = "Orchestrate autonomous coding agents at scale"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Officethree Technologies"}]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.scripts]
morpheus = "morpheus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
